--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-css": "sass src/scss/styles.scss src/css/styles.css --watch"
   },
   "devDependencies": {
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "sass": "^1.79.4"
   }
 }
